--- a/docker-compose.slim.yml
+++ b/docker-compose.slim.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  barotrauma-dedicated-server:
+  baro-slim:
     container_name: baro-slim
     ports:
       - "27015:27015/udp"
